--- a/css/materialize.css
+++ b/css/materialize.css
@@ -4501,7 +4501,7 @@ table span.badge {
 }
 
 nav {
-  color: #fff;
+  color: #212121;
   background-color: #009d71;
   width: 100%;
   height: 56px;
@@ -4523,7 +4523,7 @@ nav.nav-extended .nav-content {
 }
 
 nav a {
-  color: #fff;
+  color: #212121;
 }
 
 nav i,
@@ -4561,7 +4561,7 @@ nav .sidenav-trigger i {
 
 nav .brand-logo {
   position: absolute;
-  color: #fff;
+  color: #212121;
   display: inline-block;
   font-size: 2.1rem;
   padding: 0;
@@ -4630,7 +4630,7 @@ nav ul a {
   -webkit-transition: background-color .3s;
   transition: background-color .3s;
   font-size: 1rem;
-  color: #fff;
+  color: #212121;
   display: block;
   padding: 0 15px;
   cursor: pointer;
@@ -4689,7 +4689,7 @@ nav .input-field label i {
 }
 
 nav .input-field label.active i {
-  color: #fff;
+  color: #212121;
 }
 
 .navbar-fixed {
