--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -11,4 +11,13 @@ nav .brand-logo img {
 .waves-effect.waves-js .waves-ripple {
   background-color: rgba(131, 207, 181, 0.65);
 }
+
+.header {
+  min-height: 100vh;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 83, 46, 0.55))), url("../images/hero.jpg");
+  background-image: linear-gradient(rgba(0, 83, 46, 0.55)), url("../images/hero.jpg");
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+}
 /*# sourceMappingURL=my-styles.css.map */
