--- a/sass/my-components/_header.scss
+++ b/sass/my-components/_header.scss
@@ -1,8 +1,36 @@
 .header {
-  min-height: 100vh;
+  position: relative;
+  height: 100vh;
   background-image: linear-gradient(rgba(#00532e, 0.55)),
     url("../images/hero.jpg");
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
+  &::before,
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 0;
+    border-style: solid;
+    border-width: 0 25vw;
+  }
+  &::before {
+    left: 0;
+    border-color: transparent transparent #fff #fff;
+  }
+  &::after {
+    right: 0;
+    border-color: transparent #fff #fff transparent;
+  }
+  &.animate::before,
+  &.animate::after {
+    animation: hero 1s 2s ease forwards;
+  }
+}
+@keyframes hero {
+  to {
+    border-top-width: 10vh;
+    border-bottom-width: 10vh;
+  }
 }
