--- a/sass/my-styles.scss
+++ b/sass/my-styles.scss
@@ -1,1 +1,2 @@
-@import "my-components/navbar", "my-components/header";
+@import "my-components/navbar", "my-components/header",
+  "my-components/typography";
