--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2377,6 +2377,11 @@
   color: transparent !important;
 }
 
+@font-face {
+  font-family: "Roboto Mono";
+  src: url(../fonts/RobotoMono-Regular.ttf);
+}
+
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -2830,7 +2835,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-family: "Roboto Mono", monospace;
 }
 
 ul:not(.browser-default) {
@@ -4721,7 +4726,7 @@ a {
 
 html {
   line-height: 1.5;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-family: "Roboto Mono", monospace;
   font-weight: normal;
   color: rgba(0, 0, 0, 0.87);
 }
