--- a/sass/components/_variables.scss
+++ b/sass/components/_variables.scss
@@ -294,9 +294,11 @@ $toast-action-color: #eeff41;
 
 // 20. Typography
 // ==========================================================================
-
-$font-stack: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans,
-  Ubuntu, Cantarell, "Helvetica Neue", sans-serif !default;
+@font-face {
+  font-family: "Roboto Mono";
+  src: url(../fonts/RobotoMono-Regular.ttf);
+}
+$font-stack: "Roboto Mono", monospace !default;
 $off-black: rgba(0, 0, 0, 0.87) !default;
 // Header Styles
 $h1-fontsize: 4.2rem !default;
