feat: Ajustar la fotografia a diferentes tamaños
Sigue el placeholder en la imagen, solo falta enlazarla a dos
fotografias mias, una cuadrada y otra vertical.

--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -101,4 +101,18 @@ h4,
 h5 {
   font-family: "Ubuntu Mono", monospace;
 }
+
+.about__img {
+  display: block;
+  width: 100%;
+  max-width: 200px;
+  margin: 1rem auto 0;
+}
+
+@media screen and (max-width: 992px) {
+  .about__img {
+    width: auto;
+    margin-top: 0;
+  }
+}
 /*# sourceMappingURL=my-styles.css.map */
