feat: Acomodar los logos de las tecnologias web
Tambien se agrego el nombre de la tecnologia y una descripcion, la
cual se planea mostrar al pasar el mouse sobre la imagen.

--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -115,4 +115,9 @@ h5 {
     margin-top: 0;
   }
 }
+
+.skills__img {
+  width: 100px;
+  height: 100px;
+}
 /*# sourceMappingURL=my-styles.css.map */
