--- a/sass/my-styles.scss
+++ b/sass/my-styles.scss
@@ -1,2 +1,2 @@
 @import "my-components/navbar", "my-components/header",
-  "my-components/typography", "my-components/about";
+  "my-components/typography", "my-components/about", "my-components/skills";
