--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -12,6 +12,10 @@ nav .brand-logo img {
   background-color: rgba(131, 207, 181, 0.65);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .header {
   position: relative;
   height: 100vh;
