--- a/sass/my-components/_navbar.scss
+++ b/sass/my-components/_navbar.scss
@@ -9,3 +9,6 @@ nav .brand-logo {
 .waves-effect.waves-js .waves-ripple {
   background-color: rgba(#83cfb5, 0.65);
 }
+html {
+  scroll-behavior: smooth;
+}
