feat: Animar elementos con scroll reveal
Se implemento la libreria ScrollReveal para animar partes del sitio
al hacer scroll.
Se creo un archivo index.js donde se movio el auto init de materialize
y las configuraciones de scroll reveal.
Se ajusto el delay de la animacion del hero para que se inicie
despues de la animacion del logo y encabezado del hero.

--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -75,8 +75,8 @@ html {
 }
 
 .header.animate::before, .header.animate::after {
-  -webkit-animation: hero 1s 2s ease forwards;
-          animation: hero 1s 2s ease forwards;
+  -webkit-animation: hero 1s 3500ms ease forwards;
+          animation: hero 1s 3500ms ease forwards;
 }
 
 @-webkit-keyframes hero {
