--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -61,6 +61,9 @@ https://github.com/JSamuelAP/JSamuelAP.github.io/commit/f28ff904b7672cea41a3fe16
 
 @import "../node_modules/materialize-css/sass/materialize.scss";
 
+html {
+  scroll-behavior: smooth;
+}
 h1,
 h2,
 h3,
@@ -68,4 +71,125 @@ h4,
 h5,
 h6 {
   font-family: "Ubuntu Mono", monospace;
+}
+
+/*
+ * Navbar
+ */
+nav .brand-logo {
+  height: 100%;
+  padding: 0.5rem 0;
+  & img {
+    display: inline-block;
+    height: 100%;
+  }
+}
+.waves-effect.waves-js .waves-ripple {
+  background-color: rgba(#83cfb5, 0.65);
+}
+
+/*
+ * Header
+ */
+.header {
+  position: relative;
+  height: 100vh;
+  background-image: linear-gradient(rgba(#00532e, 0.55)),
+    url("../images/hero.jpg");
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+
+  &__content {
+    height: calc(80vh - 64px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    img {
+      height: 40vh;
+      display: block;
+      margin: 0 auto;
+    }
+    @media #{$small-and-down} {
+      height: calc(80vh - 56px);
+      h1 {
+        font-size: 2.5rem;
+      }
+    }
+  }
+
+  &::before,
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 0;
+    border-style: solid;
+    border-width: 0 25vw;
+  }
+  &::before {
+    left: 0;
+    border-color: transparent transparent #fff #fff;
+  }
+  &::after {
+    right: 0;
+    border-color: transparent #fff #fff transparent;
+  }
+  &.animate::before,
+  &.animate::after {
+    animation: hero 1s 3500ms ease forwards;
+  }
+}
+@keyframes hero {
+  to {
+    border-top-width: 10vh;
+    border-bottom-width: 10vh;
+  }
+}
+
+/*
+ * About
+ */
+.about__img {
+  display: block;
+  width: 100%;
+  max-width: 200px;
+  margin: 1rem auto 0;
+  @media screen and (max-width: 992px) {
+    width: auto;
+    margin-top: 0;
+  }
+}
+
+/*
+ * Skills
+ */
+.skills__img {
+  width: 6.5rem;
+  height: 6.5rem;
+}
+
+/*
+ * Contact
+ */
+#contact h2 {
+  @media screen and (max-width: 992px) {
+    text-align: center;
+  }
+}
+.contact {
+  &__link {
+    display: block;
+    margin-top: 2.3rem;
+    text-align: center;
+    @media screen and (max-width: 992px) {
+      margin-top: 0;
+    }
+  }
+  &__logo {
+    width: 3rem;
+  }
+  &__logo:hover {
+    transform: scale(1.1);
+  }
 }
