--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -74,6 +74,9 @@ h5,
 h6 {
   font-family: "Ubuntu Mono", monospace;
 }
+strong {
+  font-weight: 700;
+}
 
 /*
  * Navbar
@@ -158,10 +161,10 @@ html.sr .header__content {
 .about__img {
   display: block;
   width: 100%;
-  max-width: 200px;
+  max-width: 120px;
   margin: 1rem auto 0;
   @media screen and (max-width: 992px) {
-    width: auto;
+    max-width: 200px;
     margin-top: 0;
   }
 }
