--- a/css/custom.css
+++ b/css/custom.css
@@ -9422,6 +9422,10 @@ html.sr .header__content {
 
 .contact__logo {
   width: 3rem;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
 }
 
 .contact__logo:hover {
