--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -81,16 +81,40 @@ strong {
 /*
  * Navbar
  */
-nav .brand-logo {
-  height: 100%;
-  padding: 0.5rem 0;
-  & img {
-    display: inline-block;
+nav {
+  .brand-logo {
     height: 100%;
+    padding: 0.5rem 0;
+    & img {
+      display: inline-block;
+      height: 100%;
+    }
+  }
+  .switch {
+    i {
+      display: inline-block;
+    }
+    span.lever {
+      margin: 0 0 15px;
+    }
   }
 }
 .waves-effect.waves-js .waves-ripple {
   background-color: rgba(#83cfb5, 0.65);
+}
+.sidenav {
+  .switch {
+    margin-top: 2rem;
+  }
+  span.lever {
+    margin-bottom: 15px;
+  }
+}
+.header .switch input[type="checkbox"]:checked + span.lever {
+  background-color: map-get($map: $primary-js, $key: lighten-4);
+}
+.header .switch input[type="checkbox"]:checked + span.lever::after {
+  background-color: map-get($map: $primary-js, $key: base);
 }
 
 /*
