feat: Separar el scss en varios archivos

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,243 +1,12 @@
-@import "../node_modules/materialize-css/sass/components/color-variables";
-
-// Typography
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;700&family=Ubuntu+Mono&display=swap");
-$font-stack: "Roboto Mono", monospace;
-
-// Colors
-$primary-js: (
-  "base": #009d71,
-  "lighten-5": #e0f3ed,
-  "lighten-4": #b3e2d1,
-  "lighten-3": #83cfb5,
-  "lighten-2": #51bc98,
-  "lighten-1": #2aac83,
-  "darken-1": #009065,
-  "darken-2": #007f56,
-  "darken-3": #006f49,
-  "darken-4": #00532e,
-);
-$secondary-js: (
-  "base": #4d1c61,
-  "lighten-9": #f2e5f0,
-  "lighten-8": #debedb,
-  "lighten-7": #ca93c3,
-  "lighten-6": #b36aab,
-  "lighten-5": #a34d9a,
-  "lighten-4": #92348a,
-  "lighten-3": #872f84,
-  "lighten-2": #77297c,
-  "lighten-1": #682473,
-);
-$tertiary-js: (
-  "base": #faca50,
-  "lighten-4": #fef8e4,
-  "lighten-3": #fdecbb,
-  "lighten-2": #fce091,
-  "lighten-1": #fbd468,
-  "darken-1": #f8c147,
-  "darken-2": #f7b442,
-  "darken-3": #f4a33d,
-  "darken-4": #f2943a,
-  "darken-5": #ef7931,
-);
-
-$my-colors: (
-  "primary-js": $primary-js,
-  "secondary-js": $secondary-js,
-  "tertiary-js": $tertiary-js,
-);
-
-// Add my colors to map colors
-$colors: map-merge($colors, $my-colors);
-
-$primary-color: color("primary-js", "base");
-$secondary-color: color("secondary-js", "base");
-
-$navbar-font-color: color("grey", "darken-4");
-
-/*
- variables to custom
-https://github.com/JSamuelAP/JSamuelAP.github.io/commit/f28ff904b7672cea41a3fe168ffbea9bb388258b#diff-bbc5da2ab7b7b4ed9e893a8c53717370f61732e91eddca41dc300bb848045ecd
-*/
+@import "utilities/variables";
 
 @import "../node_modules/materialize-css/sass/materialize.scss";
 
-html {
-  scroll-behavior: smooth;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Ubuntu Mono", monospace;
-}
-strong {
-  font-weight: 700;
-}
+@import "base/styles";
 
-/*
- * Navbar
- */
-nav {
-  .brand-logo {
-    height: 100%;
-    padding: 0.5rem 0;
-    & img {
-      display: inline-block;
-      height: 100%;
-    }
-  }
-  .switch {
-    i {
-      display: inline-block;
-    }
-    span.lever {
-      margin: 0 0 15px;
-    }
-  }
-}
-.waves-effect.waves-js .waves-ripple {
-  background-color: rgba(#83cfb5, 0.65);
-}
-.sidenav {
-  .switch {
-    margin-top: 2rem;
-  }
-  span.lever {
-    margin-bottom: 15px;
-  }
-}
-.header .switch input[type="checkbox"]:checked + span.lever {
-  background-color: map-get($map: $primary-js, $key: lighten-4);
-}
-.header .switch input[type="checkbox"]:checked + span.lever::after {
-  background-color: map-get($map: $primary-js, $key: base);
-}
-
-/*
- * Header
- */
-.header {
-  position: relative;
-  height: 100vh;
-  background-image: linear-gradient(rgba(#00532e, 0.55)),
-    url("../images/hero.jpg");
-  background-position: center;
-  background-attachment: fixed;
-  background-size: cover;
-
-  &__content {
-    height: calc(80vh - 64px);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    img {
-      height: 40vh;
-      display: block;
-      margin: 0 auto;
-    }
-    @media #{$small-and-down} {
-      height: calc(80vh - 56px);
-      h1 {
-        font-size: 2.5rem;
-      }
-    }
-  }
-
-  &::before,
-  &::after {
-    content: "";
-    display: block;
-    position: absolute;
-    bottom: 0;
-    border-style: solid;
-    border-width: 0 25vw;
-  }
-  &::before {
-    left: 0;
-    border-color: transparent transparent #fff #fff;
-  }
-  &::after {
-    right: 0;
-    border-color: transparent #fff #fff transparent;
-  }
-  &.animate::before,
-  &.animate::after {
-    animation: hero 1s 2500ms ease forwards;
-  }
-}
-@keyframes hero {
-  to {
-    border-top-width: 10vh;
-    border-bottom-width: 10vh;
-  }
-}
-html.sr .header__content {
-  visibility: hidden;
-}
-
-/*
- * About
- */
-.about__img {
-  display: block;
-  width: 100%;
-  max-width: 120px;
-  margin: 1rem auto 0;
-  @media screen and (max-width: 992px) {
-    max-width: 200px;
-    margin-top: 0;
-  }
-}
-
-/*
- * Skills
- */
-.skills__img {
-  width: 6.5rem;
-  height: 6.5rem;
-}
-
-/*
- * Proyects
- */
-.proyects__grid {
-  display: grid;
-  grid-template-columns: 1fr;
-  @media screen and (min-width: 600px) {
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 20px;
-  }
-  @media screen and (min-width: 992px) {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-
-/*
- * Contact
- */
-#contact h2 {
-  @media screen and (max-width: 992px) {
-    text-align: center;
-  }
-}
-.contact {
-  &__link {
-    display: block;
-    margin-top: 2.3rem;
-    text-align: center;
-    @media screen and (max-width: 992px) {
-      margin-top: 0;
-    }
-  }
-  &__logo {
-    width: 3rem;
-    transition: transform 0.3s;
-  }
-  &__logo:hover {
-    transform: scale(1.1);
-  }
-}
+@import "layout/navbar";
+@import "layout/header";
+@import "layout/about";
+@import "layout/skills";
+@import "layout/proyects";
+@import "layout/contact";
