--- a/css/custom.css
+++ b/css/custom.css
@@ -1,8 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;700&family=Ubuntu+Mono&display=swap");
 /*
- variables to custom
-https://github.com/JSamuelAP/JSamuelAP.github.io/commit/f28ff904b7672cea41a3fe168ffbea9bb388258b#diff-bbc5da2ab7b7b4ed9e893a8c53717370f61732e91eddca41dc300bb848045ecd
-*/
+ * Colors
+ */
+/*
+ * Typography
+ */
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;700&family=Ubuntu+Mono&display=swap");
 .materialize-red {
   background-color: #e51c23 !important;
 }
@@ -4503,7 +4505,7 @@ table span.badge {
 }
 
 nav {
-  color: #212121;
+  color: #fff;
   background-color: #009d71;
   width: 100%;
   height: 56px;
@@ -4525,7 +4527,7 @@ nav.nav-extended .nav-content {
 }
 
 nav a {
-  color: #212121;
+  color: #fff;
 }
 
 nav i,
@@ -4563,7 +4565,7 @@ nav .sidenav-trigger i {
 
 nav .brand-logo {
   position: absolute;
-  color: #212121;
+  color: #fff;
   display: inline-block;
   font-size: 2.1rem;
   padding: 0;
@@ -4632,7 +4634,7 @@ nav ul a {
   -webkit-transition: background-color .3s;
   transition: background-color .3s;
   font-size: 1rem;
-  color: #212121;
+  color: #fff;
   display: block;
   padding: 0 15px;
   cursor: pointer;
@@ -4691,7 +4693,7 @@ nav .input-field label i {
 }
 
 nav .input-field label.active i {
-  color: #212121;
+  color: #fff;
 }
 
 .navbar-fixed {
@@ -9273,9 +9275,6 @@ strong {
   font-weight: 700;
 }
 
-/*
- * Navbar
- */
 nav .brand-logo {
   height: 100%;
   padding: 0.5rem 0;
@@ -9314,9 +9313,6 @@ nav .switch span.lever {
   background-color: #009d71;
 }
 
-/*
- * Header
- */
 .header {
   position: relative;
   height: 100vh;
@@ -9367,12 +9363,12 @@ nav .switch span.lever {
 
 .header::before {
   left: 0;
-  border-color: transparent transparent #fff #fff;
+  border-color: transparent transparent var(--background) var(--background);
 }
 
 .header::after {
   right: 0;
-  border-color: transparent #fff #fff transparent;
+  border-color: transparent var(--background) var(--background) transparent;
 }
 
 .header.animate::before, .header.animate::after {
@@ -9398,9 +9394,6 @@ html.sr .header__content {
   visibility: hidden;
 }
 
-/*
- * About
- */
 .about__img {
   display: block;
   width: 100%;
@@ -9415,17 +9408,11 @@ html.sr .header__content {
   }
 }
 
-/*
- * Skills
- */
 .skills__img {
   width: 6.5rem;
   height: 6.5rem;
 }
 
-/*
- * Proyects
- */
 .proyects__grid {
   display: -ms-grid;
   display: grid;
@@ -9449,9 +9436,6 @@ html.sr .header__content {
   }
 }
 
-/*
- * Contact
- */
 @media screen and (max-width: 992px) {
   #contact h2 {
     text-align: center;
