--- a/css/custom.css
+++ b/css/custom.css
@@ -5,6 +5,9 @@
  * Typography
  */
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;700&family=Ubuntu+Mono&display=swap");
+/*
+ * Navbar
+ */
 .materialize-red {
   background-color: #e51c23 !important;
 }
@@ -4505,7 +4508,7 @@ table span.badge {
 }
 
 nav {
-  color: #fff;
+  color: #212121;
   background-color: #009d71;
   width: 100%;
   height: 56px;
@@ -4527,7 +4530,7 @@ nav.nav-extended .nav-content {
 }
 
 nav a {
-  color: #fff;
+  color: #212121;
 }
 
 nav i,
@@ -4565,7 +4568,7 @@ nav .sidenav-trigger i {
 
 nav .brand-logo {
   position: absolute;
-  color: #fff;
+  color: #212121;
   display: inline-block;
   font-size: 2.1rem;
   padding: 0;
@@ -4634,7 +4637,7 @@ nav ul a {
   -webkit-transition: background-color .3s;
   transition: background-color .3s;
   font-size: 1rem;
-  color: #fff;
+  color: #212121;
   display: block;
   padding: 0 15px;
   cursor: pointer;
@@ -4693,7 +4696,7 @@ nav .input-field label i {
 }
 
 nav .input-field label.active i {
-  color: #fff;
+  color: #212121;
 }
 
 .navbar-fixed {
@@ -9275,6 +9278,10 @@ strong {
   font-weight: 700;
 }
 
+nav {
+  background-color: #fff;
+}
+
 nav .brand-logo {
   height: 100%;
   padding: 0.5rem 0;
@@ -9283,6 +9290,14 @@ nav .brand-logo {
 nav .brand-logo img {
   display: inline-block;
   height: 100%;
+}
+
+nav .waves-effect {
+  display: block;
+}
+
+nav .switch {
+  height: 64px;
 }
 
 nav .switch i {
@@ -9305,11 +9320,11 @@ nav .switch span.lever {
   margin-bottom: 15px;
 }
 
-.header .switch input[type="checkbox"]:checked + span.lever {
+.switch input[type="checkbox"]:checked + span.lever {
   background-color: #b3e2d1;
 }
 
-.header .switch input[type="checkbox"]:checked + span.lever::after {
+.switch input[type="checkbox"]:checked + span.lever::after {
   background-color: #009d71;
 }
 
