feat: crear variables para los triangulos del hero
Se renombro el partial header a hero

--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -65,3 +65,8 @@ $navbar-font-color: color("grey", "darken-4");
 $navbar-background-color: #fff;
 $switch-lever-color: color("primary-js", "lighten-4");
 $switch-lever-after-color: color("primary-js", "base");
+
+/*
+ * Hero
+ */
+$hero-triangles-color: #fff;
