--- a/css/custom.css
+++ b/css/custom.css
@@ -8,6 +8,9 @@
 /*
  * Navbar
  */
+/*
+ * Hero
+ */
 .materialize-red {
   background-color: #e51c23 !important;
 }
@@ -9353,9 +9356,9 @@ nav .switch span.lever {
 }
 
 .header__content img {
-  height: 40vh;
   display: block;
   margin: 0 auto;
+  height: 40vh;
 }
 
 @media only screen and (max-width: 600px) {
@@ -9365,6 +9368,10 @@ nav .switch span.lever {
   .header__content h1 {
     font-size: 2.5rem;
   }
+}
+
+html.sr .header__content {
+  visibility: hidden;
 }
 
 .header::before, .header::after {
@@ -9378,12 +9385,12 @@ nav .switch span.lever {
 
 .header::before {
   left: 0;
-  border-color: transparent transparent var(--background) var(--background);
+  border-color: transparent transparent #fff #fff;
 }
 
 .header::after {
   right: 0;
-  border-color: transparent var(--background) var(--background) transparent;
+  border-color: transparent #fff #fff transparent;
 }
 
 .header.animate::before, .header.animate::after {
@@ -9403,10 +9410,6 @@ nav .switch span.lever {
     border-top-width: 10vh;
     border-bottom-width: 10vh;
   }
-}
-
-html.sr .header__content {
-  visibility: hidden;
 }
 
 .about__img {
