--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -5,7 +5,7 @@
 @import "base/styles";
 
 @import "layout/navbar";
-@import "layout/header";
+@import "layout/hero";
 @import "layout/about";
 @import "layout/skills";
 @import "layout/proyects";
