--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,7 +1,7 @@
 .header {
   position: relative;
   height: 100vh;
-  background-image: linear-gradient(rgba(#00532e, 0.55)),
+  background-image: linear-gradient(rgba(color("primary-js", "darken-4"), 0.55)),
     url("../images/hero.jpg");
   background-position: center;
   background-attachment: fixed;
@@ -13,15 +13,18 @@
     flex-direction: column;
     justify-content: center;
     img {
-      height: 40vh;
       display: block;
       margin: 0 auto;
+      height: 40vh;
     }
     @media #{$small-and-down} {
       height: calc(80vh - 56px);
       h1 {
         font-size: 2.5rem;
       }
+    }
+    html.sr & {
+      visibility: hidden;
     }
   }
 
@@ -36,11 +39,13 @@
   }
   &::before {
     left: 0;
-    border-color: transparent transparent var(--background) var(--background);
+    border-color: transparent transparent $hero-triangles-color
+      $hero-triangles-color;
   }
   &::after {
     right: 0;
-    border-color: transparent var(--background) var(--background) transparent;
+    border-color: transparent $hero-triangles-color $hero-triangles-color
+      transparent;
   }
   &.animate::before,
   &.animate::after {
@@ -52,7 +57,4 @@
     border-top-width: 10vh;
     border-bottom-width: 10vh;
   }
-}
-html.sr .header__content {
-  visibility: hidden;
 }
