--- a/css/custom.css
+++ b/css/custom.css
@@ -9412,11 +9412,15 @@ html.sr .header__content {
   }
 }
 
+.about a:hover {
+  text-decoration: underline;
+}
+
 .about__img {
   display: block;
+  margin: 1rem auto 0;
   width: 100%;
   max-width: 120px;
-  margin: 1rem auto 0;
 }
 
 @media screen and (max-width: 992px) {
