--- a/sass/layout/_proyects.scss
+++ b/sass/layout/_proyects.scss
@@ -1,11 +1,13 @@
-.proyects__grid {
-  display: grid;
-  grid-template-columns: 1fr;
-  @media screen and (min-width: 600px) {
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 20px;
-  }
-  @media screen and (min-width: 992px) {
-    grid-template-columns: repeat(3, 1fr);
+.proyects {
+  &__grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    @media screen and (min-width: 600px) {
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 20px;
+    }
+    @media screen and (min-width: 992px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
   }
 }
