--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -1,5 +1,5 @@
 nav {
-  background-color: $navbar-background-color;
+  background-color: $navbar-bg-color;
   .brand-logo {
     height: 100%;
     padding: 0.5rem 0;
@@ -20,6 +20,19 @@ nav {
       margin: 0 0 15px;
     }
   }
+
+  body.dark & {
+    background-color: $navbar-bg-color-dark;
+    ul li a {
+      color: $font-color-light;
+      &:hover {
+        background-color: $link-color-hover-light;
+      }
+    }
+    .sidenav-trigger {
+      color: $font-color-light;
+    }
+  }
 }
 .waves-effect.waves-js .waves-ripple {
   background-color: rgba(color("primary-js", "lighten-3"), 0.65);
@@ -33,10 +46,46 @@ nav {
   }
 }
 .switch {
+  .sun {
+    color: $sun-color;
+  }
+  .moon {
+    color: $moon-color;
+  }
   input[type="checkbox"]:checked + span.lever {
     background-color: $switch-lever-color;
   }
   input[type="checkbox"]:checked + span.lever::after {
     background-color: $switch-lever-after-color;
+  }
+  body.dark & {
+    .sun {
+      color: $sun-color-light;
+    }
+    .moon {
+      color: $moon-color-light;
+    }
+    input + span.lever {
+      background-color: color("blue-grey", "darken-4");
+    }
+  }
+}
+.sidenav {
+  li a {
+    &:hover {
+      background-color: $link-color-hover-light;
+    }
+    i.material-icons {
+      color: $icon-color;
+    }
+  }
+  body.dark & {
+    background-color: $navbar-bg-color-dark;
+    a {
+      color: $font-color-light;
+      i {
+        color: $icon-color-light;
+      }
+    }
   }
 }
