--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -84,3 +84,4 @@ $switch-lever-after-color: $primary-color;
  * Hero
  */
 $hero-triangles-color: #fff;
+$hero-triangles-color-dark: $bg-color-dark;
