--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -85,3 +85,9 @@ $switch-lever-after-color: $primary-color;
  */
 $hero-triangles-color: #fff;
 $hero-triangles-color-dark: $bg-color-dark;
+
+/*
+ * About me
+ */
+$link-color: $primary-color;
+$link-color-light: color("primary-js", "lighten-1");
