--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -91,3 +91,8 @@ $hero-triangles-color-dark: $bg-color-dark;
  */
 $link-color: $primary-color;
 $link-color-light: color("primary-js", "lighten-1");
+
+/*
+ * Skills
+ */
+$card-bg-dark: #111;
