--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -96,3 +96,8 @@ $link-color-light: color("primary-js", "lighten-1");
  * Skills
  */
 $card-bg-dark: #111;
+
+/*
+ * Proyects
+ */
+$chip-bg-dark: #222;
