--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -101,3 +101,9 @@ $card-bg-dark: #111;
  * Proyects
  */
 $chip-bg-dark: #222;
+
+/*
+ * Contact
+ */
+$contact-bg-color: $primary-color;
+$contact-bg-color-dark: #111;
