feat: Aclarar el icono de luna en modo oscuro

--- a/css/custom.css
+++ b/css/custom.css
@@ -9383,7 +9383,7 @@ body.dark .switch .sun {
 }
 
 body.dark .switch .moon {
-  color: #77297c;
+  color: #a34d9a;
 }
 
 body.dark .switch input + span.lever {
