feat: Animar los cambios de colores
Se crearon mixins para agregar transiciones de colores a los
elementos que cambien de color de fondo y los bordes de los
triangulos del hero.

--- a/sass/base/_styles.scss
+++ b/sass/base/_styles.scss
@@ -12,7 +12,10 @@ h6 {
 strong {
   font-weight: 700;
 }
-body.dark {
-  background-color: $bg-color-dark;
-  color: $font-color-light;
+body {
+  @include bg-animation;
+  &.dark {
+    background-color: $bg-color-dark;
+    color: $font-color-light;
+  }
 }
