--- a/css/custom.css
+++ b/css/custom.css
@@ -9299,6 +9299,11 @@ strong {
   font-weight: 700;
 }
 
+body {
+  -webkit-transition: background-color 0.5s ease-out;
+  transition: background-color 0.5s ease-out;
+}
+
 body.dark {
   background-color: #1c121c;
   color: #fff;
@@ -9306,6 +9311,8 @@ body.dark {
 
 nav {
   background-color: #fff;
+  -webkit-transition: background-color 0.5s ease-out;
+  transition: background-color 0.5s ease-out;
 }
 
 nav .brand-logo {
@@ -9354,12 +9361,37 @@ body.dark nav .sidenav-trigger {
   background-color: rgba(131, 207, 181, 0.65);
 }
 
+.sidenav {
+  -webkit-transition: background-color 0.5s ease-out;
+  transition: background-color 0.5s ease-out;
+}
+
+.sidenav li a:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.sidenav li a i.material-icons {
+  color: #007f56;
+}
+
 .sidenav .switch {
   margin-top: 2rem;
 }
 
 .sidenav span.lever {
   margin-bottom: 15px;
+}
+
+body.dark .sidenav {
+  background-color: #261c26;
+}
+
+body.dark .sidenav a {
+  color: #fff;
+}
+
+body.dark .sidenav a i {
+  color: #2aac83;
 }
 
 .switch .sun {
@@ -9388,26 +9420,6 @@ body.dark .switch .moon {
 
 body.dark .switch input + span.lever {
   background-color: #455a64;
-}
-
-.sidenav li a:hover {
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-.sidenav li a i.material-icons {
-  color: #007f56;
-}
-
-body.dark .sidenav {
-  background-color: #261c26;
-}
-
-body.dark .sidenav a {
-  color: #fff;
-}
-
-body.dark .sidenav a i {
-  color: #2aac83;
 }
 
 .header {
@@ -9460,6 +9472,8 @@ html.sr .header__content {
   bottom: 0;
   border-style: solid;
   border-width: 0 25vw;
+  -webkit-transition: border-color 0.5s ease-out;
+  transition: border-color 0.5s ease-out;
 }
 
 .header::before {
@@ -9535,6 +9549,11 @@ body.dark .about a {
   height: 6.5rem;
 }
 
+.skills .card-panel {
+  -webkit-transition: background-color 0.5s ease-out;
+  transition: background-color 0.5s ease-out;
+}
+
 body.dark .skills .card-panel {
   background-color: #261c26;
   -webkit-box-shadow: none;
@@ -9564,6 +9583,16 @@ body.dark .skills .card-panel {
   }
 }
 
+.proyects .card {
+  -webkit-transition: background-color 0.5s ease-out;
+  transition: background-color 0.5s ease-out;
+}
+
+.proyects .card .chip, .proyects .card-reveal, .proyects .card-action {
+  -webkit-transition: background-color 0.5s ease-out;
+  transition: background-color 0.5s ease-out;
+}
+
 body.dark .proyects .card {
   background-color: #261c26;
   -webkit-box-shadow: none;
@@ -9581,6 +9610,8 @@ body.dark .proyects .card .chip {
 
 .contact {
   background-color: #009d71;
+  -webkit-transition: background-color 0.5s ease-out;
+  transition: background-color 0.5s ease-out;
 }
 
 @media screen and (max-width: 992px) {
@@ -9616,6 +9647,11 @@ body.dark .proyects .card .chip {
 
 body.dark .contact {
   background-color: #261c26;
+}
+
+.page-footer {
+  -webkit-transition: background-color 0.5s ease-out;
+  transition: background-color 0.5s ease-out;
 }
 
 body.dark .page-footer {
