--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,4 +1,5 @@
 .page-footer {
+  @include bg-animation;
   body.dark & {
     border-top: 1px solid rgba(160, 160, 160, 0.2);
     background-color: $footer-bg-color-dark;
